test/files/neg/t5148.scala
package scala.tools.nsc
package interpreter

class IMain extends Imports
